crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__error_offset_in_main_tier@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/integration/offset_tests.rs
expression: "(main, error_vec)"
---
(
    None,
    [
        ParseError {
            code: UnparsableContent,
            severity: Error,
            location: SourceLocation {
                span: Span {
                    start: 511,
                    end: 514,
                },
                line: None,
                column: None,
            },
            context: Some(
                ErrorContext {
                    source_text: "*CHI:\thello } .",
                    span: Span {
                        start: 11,
                        end: 14,
                    },
                    expected: [],
                    found: " } ",
                    line_offset: None,
                },
            ),
            labels: [],
            message: "Unparsable content in parse tree: ' } '",
            suggestion: Some(
                "Check CHAT format specification for valid syntax in this context",
            ),
            help_url: Some(
                "https://talkbank.org/errors/E316",
            ),
        },
    ],
)
