crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__error_offset_in_word@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/integration/offset_tests.rs
expression: "(word, error_vec)"
---
(
    None,
    [
        ParseError {
            code: InvalidFormType,
            severity: Error,
            location: SourceLocation {
                span: Span {
                    start: 105,
                    end: 107,
                },
                line: None,
                column: None,
            },
            context: Some(
                ErrorContext {
                    source_text: "hello@@",
                    span: Span {
                        start: 5,
                        end: 7,
                    },
                    expected: [],
                    found: "",
                    line_offset: None,
                },
            ),
            labels: [],
            message: "A word may carry only one '@' suffix, found '@@'",
            suggestion: Some(
                "Keep one marker on the word and remove the rest",
            ),
            help_url: Some(
                "https://talkbank.org/errors/E203",
            ),
        },
    ],
)
