crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__main_tier_parses_with_offset.snap
---
source: crates/talkbank-parser-tests/tests/integration/offset_tests.rs
expression: main
---
Some(
    MainTier {
        speaker: SpeakerCode(
            "CHI",
        ),
        content: TierContent {
            linkers: TierLinkers(
                [],
            ),
            language_code: None,
            content: TierContentItems(
                [
                    Word(
                        Word {
                            span: Span {
                                start: 206,
                                end: 211,
                            },
                            word_id: None,
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "hello",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                    Word(
                        Word {
                            span: Span {
                                start: 212,
                                end: 217,
                            },
                            word_id: None,
                            content: WordContents(
                                [
                                    Text(
                                        WordText(
                                            NonEmptyString(
                                                "world",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                            category: None,
                            form_type: None,
                            lang: None,
                            part_of_speech: None,
                            inline_bullet: None,
                            cached_cleaned_text: CachedStr(
                                OnceLock(
                                    <uninit>,
                                ),
                            ),
                        },
                    ),
                ],
            ),
            terminator: Some(
                Period {
                    span: Span {
                        start: 218,
                        end: 219,
                    },
                },
            ),
            postcodes: TierPostcodes(
                [],
            ),
            bullet: None,
            content_span: Some(
                Span {
                    start: 205,
                    end: 219,
                },
            ),
            language_code_span: None,
        },
        span: Span {
            start: 200,
            end: 219,
        },
        speaker_span: Span {
            start: 201,
            end: 204,
        },
        separator: TierSeparator {
            trailing_space: None,
        },
    },
)
