crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__offset_with_chinese_characters@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/integration/offset_tests.rs
expression: "(input.len(), word, errors.into_vec())"
---
(
    6,
    Some(
        Word {
            span: Span {
                start: 500,
                end: 506,
            },
            word_id: None,
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "你好",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
