crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__parse_mor_tier_offset_zero@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/offset_tests.rs
expression: "(mor, errors.into_vec())"
---
(
    Some(
        MorTier {
            tier_type: Mor,
            items: MorItems(
                [
                    Mor {
                        main: MorWord {
                            pos: PosCategory(
                                "pro",
                            ),
                            lemma: MorStem(
                                "I",
                            ),
                            features: [],
                        },
                        post_clitics: [],
                    },
                    Mor {
                        main: MorWord {
                            pos: PosCategory(
                                "v",
                            ),
                            lemma: MorStem(
                                "want",
                            ),
                            features: [],
                        },
                        post_clitics: [],
                    },
                ],
            ),
            terminator: Period {
                span: Span {
                    start: 13,
                    end: 14,
                },
            },
            span: Span {
                start: 0,
                end: 15,
            },
        },
    ),
    [],
)
