crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__parse_word_complex_with_offset@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/integration/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 500,
                end: 505,
            },
            word_id: None,
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "dog",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: Some(
                C,
            ),
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
