crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__parse_word_offset_zero@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/integration/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 5,
            },
            word_id: None,
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
